tests/cases/structs/errors/struct-field-immutable.ari
struct Point {
  x: i64,
  mut y: i64,
}

fn main() -> i64 {
  var point = Point { x: 1, y: 2 };
  point.x = 3;
  0
}
